tests/snapshots/snapshots__terminals_status.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Retrieve terminal status by ID (GET /v2/terminals/{terminalId}/status).

Reports the terminal's live state: connection, battery and printer.

Usage: flute2 terminals status [OPTIONS] <TERMINAL_ID>

Arguments:
  <TERMINAL_ID>
          Terminal UUID (positional)

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
