tests/snapshots/snapshots__transactions.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Transaction operations (create, capture, reversal, …)

Usage: flute2 transactions [OPTIONS] <COMMAND>

Commands:
  create            Charge a card or bank account immediately (POST /v2/transactions)
  capture           Capture a previously authorised transaction (POST /v2/transactions/{transactionId}/capture)
  reversal          Void or refund a transaction (POST /v2/transactions/{transactionId}/reversal)
  credit            Card or ACH credit payment (POST /v2/transactions/credit)
  tip-adjust        Adjust the tip on a transaction (POST /v2/transactions/{transactionId}/tip-adjustment)
  ach-hold          Place an ACH transaction on hold (POST /v2/transactions/{transactionId}/ach-hold)
  ach-release       Release an ACH transaction from hold (POST /v2/transactions/{transactionId}/ach-release)
  share-receipt     Send a transaction receipt to a customer (POST /v2/transactions/{transactionId}/share-receipt)
  calculate-amount  Calculate the totals for an amount without creating a transaction (POST /v2/transactions/calculate-amount)
  get               Fetch a single transaction by ID (GET /v2/transactions/{transactionId})
  list              List transactions for the current merchant (GET /v2/transactions)
  inspect           Show rich details for a single transaction (GET /v2/transactions/{transactionId})
  help              Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
