tests/snapshots/snapshots__transactions_ach-hold.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Place an ACH transaction on hold (POST /v2/transactions/{transactionId}/ach-hold)

Usage: flute2 transactions ach-hold [OPTIONS] <TRANSACTION_ID>

Arguments:
  <TRANSACTION_ID>  ACH transaction UUID to hold (positional)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
