tests/snapshots/snapshots__transactions_calculate-amount.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Calculate the totals for an amount without creating a transaction (POST /v2/transactions/calculate-amount)

Usage: flute2 transactions calculate-amount [OPTIONS] --amount <AMOUNT>

Options:
      --amount <AMOUNT>
          Amount to calculate totals for (required). Plain decimal, e.g. `100.00`
      --currency-code <CURRENCY_CODE>
          Currency code, e.g. `USD`
      --pricing-type <PRICING_TYPE>
          Pricing type: `card` or `cash` [possible values: card, cash]
      --tip-amount <TIP_AMOUNT>
          Tip amount. Plain decimal, e.g. `5.00`
      --tip-rate <TIP_RATE>
          Tip rate as a percentage, e.g. `18.5` for 18.5%
      --discount-amount <DISCOUNT_AMOUNT>
          Discount amount. Plain decimal, e.g. `5.00`
      --discount-rate <DISCOUNT_RATE>
          Discount rate as a percentage, e.g. `10` for 10%
      --surcharge-rate <SURCHARGE_RATE>
          Surcharge rate as a percentage, e.g. `3.5` for 3.5%
  -h, --help
          Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
