tests/snapshots/snapshots__transactions_reversal.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Void or refund a transaction (POST /v2/transactions/{transactionId}/reversal).

One endpoint for both: whether the transaction has settled is detected server-side.

Usage: flute2 transactions reversal [OPTIONS] --transaction-id <TRANSACTION_ID>

Options:
      --transaction-id <TRANSACTION_ID>
          UUID of the transaction to reverse (required)

      --amount <AMOUNT>
          Refund part of a settled card transaction. Refused for an unsettled or ACH transaction, which the API reverses in full. Omit for a full reversal

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
